--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && contains(github.ref, '/tags/')
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     needs: [build]
     steps:
       - name: Download artifacts
